Api for state of alarm
