# api/alarmApi.js
@@ -15,16 +15,38 @@ router.post("/turn-on", (req, res, next)=>{
     if(!gas || !temperature)
         return next(new AppError("You must provide enough information", 400))
 
+    if(global.alarm)
+        return next(new AppError("Alarm has already been turned on", 400))
+
     const turnOnSpeaker = postSpeakerData(500)
     const turnOnAlarm = postRelayData(true)
-    const alarmMessage = postLCDData("Danger!!")
+    const showDangerMessage = postLCDData("Danger!!")
+    const turnOffSpeaker = postSpeakerData(0)
+    const turnOffAlarm = postRelayData(false)
+    const showMessage = postLCDData("Turned off")
     const recordAlarm = addNewAlarm(userEmail, {gas, temperature})
 
-    Promise.all([turnOnSpeaker, turnOnAlarm, alarmMessage, recordAlarm])
+    Promise.all([turnOnSpeaker, turnOnAlarm, showDangerMessage, recordAlarm])
         .then((results)=>{
             console.log('results :>> ', results);
-            if(results.reduce((acc, cur)=>acc&&cur))
+            if(results.reduce((acc, cur)=>acc&&cur)){
+                global.alarm = true;
                 respondSuccess(res, 200, "Alarm has been turned on")
+                // Turn off alarm after 5 minutes
+                setTimeout(()=>{
+                    if(global.alarm){
+                        Promise.all([turnOffSpeaker, turnOffAlarm, showMessage])
+                            .then((results)=>{
+                                if(results.reduce((acc, cur)=>acc&&cur)){
+                                    global.alarm = false
+                                }                                
+                            })
+                            .catch((err)=>{
+                                console.error(err);
+                            })
+                    }
+                }, 300000)
+            }
             else
                 next(new AppError("There is an error while processing request!", 500))
         })
@@ -36,12 +58,17 @@ router.post("/turn-on", (req, res, next)=>{
 router.post("/turn-off", (req, res, next)=>{
     const turnOffSpeaker = postSpeakerData(0)
     const turnOffAlarm = postRelayData(false)
-    const alarmMessage = postLCDData("Turned off")
+    const showMessage = postLCDData("Turned off")
 
-    Promise.all([turnOffSpeaker, turnOffAlarm, alarmMessage])
+    if(!global.alarm)
+        return next(new AppError("Alarm has already been turned off", 400))
+
+    Promise.all([turnOffSpeaker, turnOffAlarm, showMessage])
         .then((results)=>{
-            if(results.reduce((acc, cur)=>acc&&cur))
+            if(results.reduce((acc, cur)=>acc&&cur)){
                 respondSuccess(res, 200, "Alarm has been turned off")
+                global.alarm = false
+            }
             else
                 next(new AppError("There is an error while processing request!", 500))
         })
@@ -63,5 +90,11 @@ router.get("/history", async(req, res, next)=>{
             }   
         })
     res.status(200).json(data)
+})
+
+router.get("/state", (req, res, next)=>{
+    res.status(200).json({
+        state: global.alarm? "on": "off"
+    })
 })
 module.exports = router
